--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -826,12 +826,21 @@ function addProduct(prod, cant = 1) {
   if (!prod) return;
 
   cant = parseFloat(cant);
+  // 🛠️ FIX UNIVERSAL: asegurar departamento desde catálogo
+if (!prod.departamento_id || prod.departamento_id === "null" || prod.departamento_id === "undefined") {
+  const prodReal = catalogo.find(x => x.id === prod.id);
+  if (prodReal && prodReal.departamento_id) {
+    prod.departamento_id = prodReal.departamento_id;
+  }
+}
+
   const existente = carrito.find(x => x.id === prod.id);
 
   // -------------------------------
   // 🚨 PRODUCTO DE BALANZA
   // -------------------------------
   if (cant < 1 || String(prod.codigo || "").startsWith("2")) {
+    
     carrito.push({
       ...prod,
       codigo: prod.codigo || prod.codigoBarra || "",
