Expose ejecutarBusqueda functions to global scope

--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -1306,6 +1306,7 @@ resetScanner();
   }
 
   // Hacer la búsqueda y su versión original globales
+// 🔄 Resultado de búsqueda completa
 window.ejecutarBusqueda = ejecutarBusqueda;
 window.ejecutarBusquedaOriginal = ejecutarBusqueda;
 
