--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -141,7 +141,8 @@ header,#loginScreen,.btn,#modalCobro,#qrReaderContainer{display:none!important}
   position: absolute !important;
 }
 #carrito-container {
-  bottom: -25px !important;  /* baja el carrito */
+  bottom: -65px !important;     /* 🔥 baja más el carrito */
+  margin-top: 25px !important;  /* espacio visual extra */
 }
 
 </style>
