--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -1566,7 +1566,7 @@ $("#btnConfirmarCobro").onclick = async () => {
       cambio: cambio > 0 ? cambio : 0,
       notas: $("#notasCobro").value || "",
       ts_local: Date.now(),
-      estado: "pendiente"
+      estado: "pendiente",
       ubicacion: await obtenerUbicacionRobusta().catch(() => null)
     };
 
