--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -2181,7 +2181,7 @@ function imprimirTicketInstantaneo(venta) {
 // Mensaje Navideño con adornos
 t += "------------------------------\n";
 t += "        ✨ GRACIAS ✨         \n";
-t += "      POR SU COMPRA 🎁       \n";
+t += "         POR SU COMPRA         \n";
 t += "------------------------------\n";
 t += "      🎄 FELIZ NAVIDAD 🎄     \n";
 t += "  ⭐ PROSPERO AÑO NUEVO ⭐    \n";
