--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -351,6 +351,7 @@ const $ = s => document.querySelector(s);
 let carrito = [];
 let catalogo = [];
 let departamentos = {};
+let departamentosVenta = {};   // ← NUEVO
 let rutaId = null;
 let USUARIO_LOGUEADO = null;
 let clienteSeleccionado = null;
@@ -445,6 +446,7 @@ document.getElementById("carrito-container").style.display = "block";
     await Promise.all([
       cargarCatalogo(),
       cargarDepartamentos(),
+      cargarDepartamentosVenta(),   // 👈 AQUÍ
       fijarClientePublico()
     ]);
 
@@ -474,11 +476,13 @@ window.addEventListener("DOMContentLoaded", async () => {
     $("#loginScreen").style.display = "none";
     $("#posApp").style.display = "block";
 
-    await Promise.all([
-      cargarCatalogo(),
-      cargarDepartamentos(),
-      fijarClientePublico()
-    ]);
+await Promise.all([
+  cargarCatalogo(),
+  cargarDepartamentos(),
+  cargarDepartamentosVenta(),  // 👈 TAMBIÉN AQUÍ
+  fijarClientePublico()
+]);
+
   } catch (err) {
     console.warn("⚠️ No se pudo restaurar sesión previa:", err);
     localStorage.removeItem("usuario_ruta");
@@ -657,6 +661,25 @@ cachearDatos("/catalogo", catalogo);
     console.error("❌ Error cargando catálogo:", err);
     statusBox.textContent = "⚠️ Error al cargar catálogo. Intenta recargar o verifica conexión.";
     statusBox.style.background = "#c0392b";
+  }
+}
+/* ===========================================================
+   🏷️ CARGA DE DEPARTAMENTOS VENTA PARA POS
+   =========================================================== */
+
+async function cargarDepartamentosVenta() {
+  try {
+    const res = await fetch("/departamentos_venta");
+    let data = await res.json();
+
+    departamentosVenta = Object.fromEntries(
+      data.map(dep => [String(dep.id), dep])
+    );
+
+    console.log("Departamentos venta cargados:", departamentosVenta);
+
+  } catch (err) {
+    console.error("Error cargando departamentos venta:", err);
   }
 }
 
