--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -1676,25 +1676,36 @@ async function sincronizarVentaFirestore(venta) {
       descuento_monto: venta.descuento || 0,
       cortado: false,
       detalle: venta.carrito.map(it => {
-        const dep = departamentos[it.departamento_id] || { iva: 0, ieps: 0 };
-        return {
-          id: it.id,
-          nombre: it.nombre,
-          codigo: it.codigo,
-          cantidad: it.cantidad,
-          precio_unit: it.precioUnit,
-          importe: it.importe,
-          costo_unit: it.costoUnit || 0,
-          costo_total: (it.costoUnit || 0) * it.cantidad,
+  const dep = departamentos[it.departamento_id] || { 
+    id: it.departamento_id || "0",
+    nombre: "SIN DEPTO",
+    iva: Number(it.ivaTasa) || 0,
+    ieps: Number(it.iepsTasa) || 0
+  };
 
-          claveSat: it.claveSat || null,
-          unidadSat: it.unidadSat || null,
-          ivaTasa: dep.iva,
-          iepsTasa: dep.ieps,
-          departamento_id: it.departamento_id,
-          departamento_info: dep
-        };
-      })
+  return {
+    id: it.id,
+    nombre: it.nombre,
+    codigo: it.codigo,
+    cantidad: it.cantidad,
+    precio_unit: it.precioUnit,
+    importe: it.importe,
+
+    costo_unit: it.costoUnit || 0,
+    costo_total: (it.costoUnit || 0) * it.cantidad,
+
+    claveSat: it.claveSat || null,
+    unidadSat: it.unidadSat || null,
+
+    ivaTasa: dep.iva,
+    iepsTasa: dep.ieps,
+
+    departamento_id: dep.id,
+    departamento_nombre: dep.nombre,        // ⬅️ ⭐ NUEVO ⭐
+    departamento_info: dep                 // ⬅️ por si lo quieres completo
+  };
+})
+
     };
 
     // Guardar en la colección correcta
