--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -2659,15 +2659,10 @@ if (typeof window.ejecutarBusquedaOriginal === 'function') {
     }
   }
 
-
-// ✅ CONECTAR ESCÁNER CON BÚSQUEDA REAL DEL POS
-// 🔧 Ejecutar búsqueda REAL del POS
+<!-- 🔧 Conectar escáner con búsqueda real -->
+<script>
 window.ejecutarBusquedaOriginal = ejecutarBusqueda;
-
 </script>
-
-</body>
-</html>
 <style>
 /* 🎨 ESTILOS MEJORADOS PARA EL ESCÁNER */
 #qrReaderContainer {
